# get_system_info

./: CMakeLists.txt  README.md
include/: Fingerprint.h
src/: Fingerprint.cpp  main.cpp
